[package]
name = "rust_library_sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/grpc/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/grpc/client.rs"

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.5"
