[package]
name = "rust_library_sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/grpc/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/grpc/client.rs"

[[bin]] # Bin to run the Tokio example
name = "tokio-example"
path = "src/tokio_sandbox/tokio_main.rs"

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.5", default-features = true }
reqwest = { version = "0.11", features = ["json"] }
kube = { version = "0.61.0", features = ["admission", "rustls-tls"] }
kube-runtime = "0.61.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
actix-rt = "1.1.1"
actix-web = { version = "3.3.2", features = ["rustls"] }

[build-dependencies]
tonic-build = "0.5"
